--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <br>
 
       <div class="text-center">
-        <a href="#" class="btn btn-light" role="button"> 🎉 Partiful link 🎉</a>
+        <a href="https://partiful.com/e/vRSXS5Qz8TY168rSLIOA" class="btn btn-light" role="button"> 🎉 Partiful link 🎉</a>
       </div>
       
    
